--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   </head>
   <body>
     <div class="main">
+
+      <!--HEADER -->
         <div class="header">
+          <div class="flexcontainer">
           <img src="resources/media/logo.png" alt="logo">
           <h2>SECRET AGENT SUPPLY INC.</h2>
         </div>
+        </div>
+
+        <!--BANNER -->
         <div class="banner">
           <div class="flexcontainer">
             <div class="flexitem">
@@ -19,44 +25,68 @@
               <h3>SPORT BIKES AND MOTORCYCLES</h3>
             </div>
           </div>
-          <nav>
-            <ul>
-              <li><a href="#">Eyewear</a></li>
-              <li><a href="#">Apparel</a></li>
-              <li><a href="#">Gadgets</a></li>
-              <li><a href="#">Vehicles</a></li>
-              <li><a href="#">Classes</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </nav>
         </div>
+
+        <!-- NAVIGATION -->
+        <nav>
+          <ul class="bigmenu">
+            <li><a href="#">Eyewear</a></li>
+            <li><a href="#">Apparel</a></li>
+            <li><a href="#">Gadgets</a></li>
+            <li><a href="#">Vehicles</a></li>
+            <li><a href="#">Classes</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+
+          <ul class="smallmenu">
+            <li> <a href="#">Menu</a> </li>
+          </ul>
+        </nav>
+
+
+
+        <!--PRODUCTS -->
         <div class="products">
-          <div class="flexcontainer">
-            <div class="flexitem">
-              <img src="" alt="">
-              <span class="description">Exploding Pen</span>
+          <div class="product-container">
+            <div class="product">
+              <div class="product-image">
+                <img src="resources/media/pen.png" alt="">
               </div>
-              <div class="flexitem">
-                <img src="" alt="">
-                <span class="description">Cellular Watch</span>
+              <span class="productdescription">Exploding Pen</span>
               </div>
-              <div class="flexitem">
-                <img src="" alt="">
-                  <span class="description">Thermal Glasses</span>
+              <div class="product watch">
+                <div class="product-image">
+                  <img src="resources/media/watch.png" alt="">
+                </div>
+                <span class="productdescription">Cellular Watch</span>
+              </div>
+              <div class="product glasses">
+                <div class="product-image">
+                  <img src="resources/media/glasses.png" alt="">
+                </div>
+                  <span class="productdescription">Thermal Glasses</span>
               </div>
             </div>
           </div>
 
-          <div class="location">
-            <span class="description">Location</span>
-            <span class="information">-47.346436, 84.32354</span>
-          </div>
-          <div class="Hours">
-            <span class="description">Hours</span>
-            <span class="information">0800-1800</span>
+          <!--CONTACT -->
+          <div class="container">
+            <div class="infocontainer">
+              <div class="info">
+                <span class="description">Location</span>
+                <span class="information">-47.346436, 84.32354</span>
+              </div>
+              <div class="info">
+                <span class="description">Hours</span>
+                <span class="information">0800-1800</span>
+              </div>
+            </div>
           </div>
 
-          <footer>Copyright Secret Agent Supply Inc.</footer>
+          <!--FOOTER -->
+          <div class="footercontainer">
+            <footer>Copyright Secret Agent Supply Inc.</footer>
+          </div>
         </div>
   </body>
 </html>
