--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </ul>
 
           <ul class="smallmenu">
-            <li> <a href="#">Menu</a> </li>
+            <li> <a href="">Menu</a> </li>
           </ul>
         </nav>
 
